-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/src/mongo/db/exec/scoped_timer.h:62: UNINIT_CTOR 134014 Class member declaration for "_startTS".
/src/mongo/db/exec/scoped_timer.cpp:39: UNINIT_CTOR 134014 Non-static class member "_startTS" is not initialized in this constructor nor in any functions that it calls.