SERVER-70861 Coverity analysis defect 134014: Uninitialized scalar field